Revision history for MooseX-Traits-Pluggable

0.10  2010-07-25 08:44:14
    - better support for factory classes

0.09  2010-02-07 00:59:59
    - update POD

0.08  2009-08-27 01:08:50
   - Remove use of Moose::Autobox as it fails on some platforms
     (notably, Activestate have bad PPMs)

0.07  2009-07-23 20:38:37
   - added support for _trait_namespace arrays

0.06  2009-07-17 23:33:00
   - Work correctly with positional parameters followed by a hashref
     passed to new_with_traits.

0.05  2009-07-17 20:15:34
    - Add support for composing MooseX::MethodAttributes roles into
      anonymous classes correctly.

0.04  2009-06-09 18:02:59
    - support single trait scalar in new_with_traits

0.03  2009-06-02 10:30:44
    - fix warnings from "make test"

0.02  2009-06-02 09:57:57
    - added _traits and _resolved_traits attributes

0.01  2009-06-02 07:38:27
    - inital release