@@ -1,9 +1,3 @@
-MooseX-Traits-Pluggable*
-MANIFEST
-MANIFEST.bak
-META.yml
-Makefile
-Makefile.old
-blib
-inc
-pm_to_blib
+.*.sw[nop]
+.build/
+MooseX-Traits-Pluggable-*
