@@ -1,5 +1,0 @@
-# stolen from Devel::REPL
-^(?!script/|examples/|lib/|inc/|t/|Makefile.PL$|README$|MANIFEST$|Changes$|META.yml$)
-.svn/
-.git/
-.swp$
