@@ -1,0 +1,12 @@
+name                = MooseX-Traits-Pluggable
+author              = Rafael Kitover <rkitover@cpan.org>
+license             = Perl_5
+copyright_holder    = Rafael Kitover
+copyright_year      = 2014
+
+[@AVAR]
+dist            = MooseX-Traits-Pluggable
+bugtracker      = rt
+authority       = cpan:RKITOVER
+github_user     = rkitover
+install_command = cpanm .
